--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,9 @@ tasks.withType(JavaCompile) {
 test {
     useJUnitPlatform()
 }
+
+task demoqa_test(type: Test){
+    useJUnitPlatform{
+        includeTags "demoqa"
+    }
+}
